--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                 <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
-            </ul>  
-            <div class="header-content">
-                <h4 class="header-subtitle" >Hello, I am</h4>
-                <h1 class="header-title">Yatharth Sharma</h1>
-                <h6 class="header-mono" >Frond end Designer | Developer</h6>
-                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
+            </ul>
+                 
+        <div class="header-content">
+            <h4 class="header-subtitle" >Hello, I am</h4>
+            <h1 class="header-title">Yatharth Sharma</h1>
+            <h6 class="header-mono" >Frond end Designer | Developer</h6>
+            <a href="https://docs.google.com/document/d/14H3JSMt1x2UX1t7Fcl4W9xOMQSXnYqiX/edit?usp=sharing&ouid=109081097156399127580&rtpof=true&sd=true"><button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Request Resume</button></a>
             </div>
         </div>
     </header>
@@ -81,7 +82,7 @@
                 I am dedicated to delivering high-quality, user-friendly websites that meet the needs of clients and users alike. I enjoy working collaboratively with teams to find creative solutions to complex problems, and I am always striving to exceed expectations and deliver exceptional results.
                     
                 Overall, being a web developer allows me to combine my love of technology with my passion for creating beautiful, functional websites that make a difference in people's lives.</p>
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
+                <a href="https://docs.google.com/document/d/14H3JSMt1x2UX1t7Fcl4W9xOMQSXnYqiX/edit?usp=share_link&ouid=109081097156399127580&rtpof=true&sd=true"><button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Request My CV</button></a>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
@@ -89,9 +90,9 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Birthdate</span> : 13/09/2002</li>
                     <li><span>Email</span> : yatharthsharma1309@gmail.com</li>
-                    <li><span>Phone</span> : + 91 8802518567</li>
+                    <li><span>Phone</span> : + 91 8802518xxx</li>
                     <li><span>Linkedin</span> : <a href="https://www.linkedin.com/in/yatharth-sharma-32a1a1200/"> yatharth-sharma-32a1a1200</a></li>
-                    <li><span>Address</span> : B-874 First Floor, Gate No- 4 Greenfield Colony, Faridabad, Haryana</li>
+                    <!-- <li><span>Address</span> : B-874 First Floor, Gate No- 4 Greenfield Colony, Faridabad, Haryana</li> -->
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
@@ -308,8 +309,8 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Frontend Website Designing</h5>
-                            <P class="subtitle">As a freelance frontend website designer, my goal is to create visually appealing and user-friendly websites that effectively communicate my clients' brand messaging and values. I specialize in designing the frontend of websites, which includes the layout, visual design, and user interface. I work closely with my clients to understand their specific needs and preferences, and use my design expertise to craft a custom website that meets those requirements. I also pay close attention to user experience, ensuring that the website is easy to navigate and intuitive to use.
-                            Using HTML, CSS, and JavaScript, I bring the design to life and create a responsive website that is optimized for viewing across a range of devices and screen sizes. I also have experience with frontend frameworks such as Bootstrap and React, which allow for more efficient and streamlined development. I provide ongoing support and maintenance to ensure that the website remains up-to-date and functioning optimally. Overall, my focus is on delivering high-quality, professional websites that help my clients achieve their business goals and stand out in their respective industries.</P>
+                            <P class="subtitle">As a freelance frontend website designer, my goal is to create visually appealing and user-friendly websites that effectively communicate my clients' brand messaging and values. I specialize in designing the frontend of websites, which includes the layout, visual design, and user interface.
+                            Using HTML, CSS, and JavaScript, I bring the design to life and create a responsive website that is optimized for viewing across a range of devices and screen sizes. I also have experience with frontend frameworks such as Bootstrap and React, which allow for more efficient and streamlined development.</P>
                         </div>
                     </div>
                 </div>
@@ -320,7 +321,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Data Analysis</h5>
-                            <P class="subtitle">As a freelance data analyst, my goal is to help businesses make informed decisions by providing insights from their data. I work with clients to understand their data needs and develop custom solutions to analyze and visualize their data.Using statistical software (Power BI) and programming languages such as Python, I clean and manipulate data to prepare it for analysis. I then use a range of statistical techniques and visualization tools to uncover patterns, trends, and correlations in the data. Whether it's analyzing customer behavior, optimizing marketing campaigns, or identifying operational inefficiencies, I use data analysis to help clients make data-driven decisions that improve their business outcomes. Throughout the process, I prioritize clear communication and collaboration with clients to ensure that their data analysis needs are fully met. Overall, my focus is on delivering high-quality, actionable insights that enable clients to make strategic decisions based on their data.</P>
+                            <P class="subtitle">As a freelance data analyst, my goal is to help businesses make informed decisions by providing insights from their data. I work with clients to understand their data needs and develop custom solutions to analyze and visualize their data.Using statistical software (Power BI) and programming languages such as Python, I clean and manipulate data to prepare it for analysis. I then use a range of statistical techniques and visualization tools to uncover patterns, trends, and correlations in the data. Whether it's analyzing customer behavior, optimizing marketing campaigns, or identifying operational inefficiencies.</P>
                         </div>
                     </div>
                 </div>
@@ -331,8 +332,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Data Visualization Using PowerBI</h5>
-                            <P class="subtitle">As a freelance data visualization specialist using Power BI, my goal is to help businesses communicate their data in a clear and effective way. I work closely with clients to understand their data needs and develop custom dashboards and reports that showcase their data in an interactive and engaging manner. Using Power BI's suite of tools, I transform raw data into actionable insights by creating visualizations that highlight trends, patterns, and correlations in the data. Whether it's analyzing sales data, monitoring KPIs, or tracking website traffic, I design dashboards that are tailored to the specific needs of each client. Throughout the process, I prioritize clear communication and collaboration with clients to ensure that their data visualization needs are fully met. I provide ongoing support and training to ensure that clients are able to use and update their dashboards as their data needs evolve. Overall, my focus is on delivering high-quality, user-friendly data visualizations that enable clients to make informed decisions and communicate their insights effectively to stakeholders.
-                                </P>
+                            <P class="subtitle">As a freelance data visualization specialist using Power BI, my goal is to help businesses communicate their data in a clear and effective way. Using Power BI's suite of tools, I transform raw data into actionable insights by creating visualizations that highlight trends, patterns, and correlations in the data. Whether it's analyzing sales data, monitoring KPIs, or tracking website traffic, I design dashboards that are tailored to the specific needs of each client. Throughout the process, I prioritize clear communication and collaboration with clients to ensure that their data visualization needs are fully met.</P>
                         </div>
                     </div>
                 </div>
@@ -386,10 +386,10 @@
                             <span class="date">MO</span>
                         </div>
                         <ul class="list">
-                            <li class="list-item">5 <span class="text-muted">Project</span></li>
-                            <li class="list-item">1GB <span class="text-muted">Storage</span></li>
+                            <li class="list-item">1 <span class="text-muted">Project</span></li>
+                            <li class="list-item">0.4GB <span class="text-muted">Storage</span></li>
                             <li class="list-item"><span class="text-muted">No Domain</span></li>
-                            <li class="list-item">1 <span class="text-muted">User</span></li>
+                            <!-- <li class="list-item">1 <span class="text-muted">User</span></li> -->
                         </ul>
                         <button class="btn btn-primary btn-rounded w-lg">Subscribe</button>
                     </div>
@@ -399,14 +399,14 @@
                         <h3 class="price-card-title">Basic</h3>
                         <div class="price-card-cost">
                             <sup class="ti-money"></sup>
-                            <span class="num">10</span>
+                            <span class="num">2</span>
                             <span class="date">MO</span>
                         </div>
                         <ul class="list">
-                            <li class="list-item">50 <span class="text-muted">Project</span></li>
-                            <li class="list-item">10GB <span class="text-muted">Storage</span></li>
+                            <li class="list-item">2 <span class="text-muted">Project</span></li>
+                            <li class="list-item">1GB <span class="text-muted">Storage</span></li>
                             <li class="list-item">1<span class="text-muted">Domain</span></li>
-                            <li class="list-item">5 <span class="text-muted">User</span></li>
+                            <!-- <li class="list-item">5 <span class="text-muted">User</span></li> -->
                         </ul>
                         <button class="btn btn-primary btn-rounded w-lg">Subscribe</button>
                     </div>
@@ -420,10 +420,10 @@
                             <span class="date">MO</span>
                         </div>
                         <ul class="list">
-                            <li class="list-item">150 <span class="text-muted">Project</span></li>
-                            <li class="list-item">15GB <span class="text-muted">Storage</span></li>
-                            <li class="list-item">5<span class="text-muted"> Domain</span></li>
-                            <li class="list-item">15<span class="text-muted">User</span></li>
+                            <li class="list-item">5 <span class="text-muted">Project</span></li>
+                            <li class="list-item">2GB <span class="text-muted">Storage</span></li>
+                            <li class="list-item">2<span class="text-muted"> Domain</span></li>
+                            <!-- <li class="list-item">15<span class="text-muted">User</span></li> -->
                         </ul>
                         <button class="btn btn-primary btn-rounded w-lg">Subscribe</button>
                     </div>
@@ -437,10 +437,10 @@
                             <span class="date">MO</span>
                         </div>
                         <ul class="list">
-                            <li class="list-item">500 <span class="text-muted">Project</span></li>
-                            <li class="list-item">1000GB <span class="text-muted">Storage</span></li>
-                            <li class="list-item">10<span class="text-muted"> Domain</span></li>
-                            <li class="list-item">Unlimited<span class="text-muted">User</span></li>
+                            <li class="list-item">10 <span class="text-muted">Project</span></li>
+                            <li class="list-item">5GB <span class="text-muted">Storage</span></li>
+                            <li class="list-item">5<span class="text-muted"> Domain</span></li>
+                            <!-- <li class="list-item">Unlimited<span class="text-muted">User</span></li> -->
                         </ul>
                         <button class="btn btn-primary btn-rounded w-lg">Subscribe</button>
                     </div>
@@ -739,17 +739,17 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+91 8802518567</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+91 8802518xxx</span></h6>
                             </div>
                         </div>
-                        <div class="row mb-2">
+                        <!-- <div class="row mb-2">
                             <div class="col-1 pt-1 mr-1">
                                 <i class="ti-map-alt icon-md"></i>
                             </div>
                             <div class="col-10">
                                 <h6 class="d-inline">Address :<br> <span class="text-muted">B-874 First Floor Greenfield Colony Faridabad</span></h6>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="row mb-2">
                             <div class="col-1 pt-1 mr-1">
                                 <i class="ti-envelope icon-md"></i>
